# credibility

./: .gitignore  Dockerfile  README.md  cr.n3  export_edges.py  load_graph.py  pyproject.toml  requirements.in  requirements.txt  tto_sources_credibility_update.py
.github/workflows/: main.yaml
app/: main.py
app/models/: classes.py  input_classes.py  output_classes.py
app/routers/: domains.py  factcheckers.py  origins.py  sources.py  urls.py  utils.py
app/service/: credibility.py  persistence.py  unshortener.py  utils.py
app/service/batch_origins/: adfontesmedia.py  fact_checkers.py  factchecking_report.py  fakenewscodex.py  ifcn.py  lemonde_decodex.py  mbfc.py  ntt.py  opensources.py  realorsatire.py  reporterslab.py
app/service/external_origins/: mywot.py  newsguard.py
app/service/origins/: __init__.py
app/service/origins/batch/: __init__.py  adfontesmedia.py  covid_national_sources.py  disinfo_eu_indian_net.py  factchecking_report.py  fakenewscodex.py  ifcn.py  junknews_aggregator.py  lemonde_decodex.py  mbfc.py  ntt.py  opensources.py  pink_slime.py  realorsatire.py  reporterslab.py  wikipedia_lists.py
app/service/origins/realtime/: __init__.py  mywot.py  newsguard.py
app/service/realtime_origins/: mywot.py  newsguard.py
