[tool.pdm]

[project]
name = "credibility"
version = "0.1.0"
description = "Credibility computation for MisinfoMe"
authors = [{ name = "Martino Mensio", email = "martino.mensio@open.ac.uk" }]
dependencies = [
    "fastapi",
    "uvicorn",
    "requests",
    "tqdm",
    "pymongo",
    "tldextract",
    "beautifulsoup4",
    "lxml",
    "python-dotenv",
    # the following are for security constraints
    "certifi>=2023.11.17",
    "urllib3>=1.26.18",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm.dev-dependencies] # This is dev dependencies
dev1 = ["black", "pytest"]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
